cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_51.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:33: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:33:5: Write of unused value
31.       iv = &(*ivec)[0];
32.       c2l(iv, v0);
33.       c2l(iv, v1);
          ^
34.       ti[0] = v0;
35.       ti[1] = v1;
